--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3307/px?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=root
 
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.properties.hibernate.use_sql_comments = true
+
+logging.level.org.hibernate.SQL = debug
