--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,5 +7,6 @@ spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.use_sql_comments = true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.default_batch_fetch_size = 1000
 
 logging.level.org.hibernate.SQL = debug
